# webgpu-game-engine

./: Cargo.toml  README.md
examples/: cargo.toml  main.rs
examples/dice/: dice.mtl  mod.rs
examples/triangle/: mod.rs
src/: lib.rs
src/engine/: mod.rs  mouse_service.rs  service.rs  winit.rs
src/importer/: defaults.rs  helper.rs  mod.rs  obj.rs
src/renderer/: bind_material.rs  draw_impl.rs  draw_state.rs  light.rs  material.rs  mod.rs  render.rs  staging_belt_and_command_encoder.rs  wgpu_handles.rs
src/renderer/shaders/: phong-model.wgsl
src/scene/: camera.rs  mesh.rs  mod.rs  object3d.rs  scene.rs
src/util/: boxed_slice.rs  frame_delta.rs  matrix_util.rs  mod.rs  orbit_controls.rs  simple_axes.rs
