[package]
name = "webgpu-game-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
harness = false

[dependencies]
env_logger = "0.11.0"
glm = "0.2.3"
lazy_static = "1.4.0"
obj = "0.10.2"
pollster = "0.3.0"
strum = "0.26.1"
strum_macros = "0.26.1"
wgpu = "0.19.1"
winit = "0.29.10"

[dependencies.bytemuck]
version = "1.14.1"
features = ["derive"]
